[package]
name = "my-website"
version = "0.0.1"
authors = ["Matei Pralea <matei.pralea@proton.me>"]
edition = "2024"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
    "web_screen_reader",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
serde = { version = "1", features = ["derive"] }


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
